testsuite/bsc.bugs/github/gh353/Bug353_BH.bs.bsc-out.expected
checking package dependencies
compiling Bug353_BH.bs
Error: "Bug353_BH.bs", line 16, column 16: (T0007)
  Unbound type constructor `Bug353_Type.Foo_$Foo'
Error: "Bug353_BH.bs", line 24, column 6: (T0080)
  Type error at the use of the following function:
    Foo

  The expected return type of the function:
    Bug353_BH.Foo

  The return type according to the use:
    Bug353_Type.Foo b__ a__

